# BugCatcher

./: .gitignore  Prompts-used.md  README.md  README_verify_stack_trace.md  _summarize_report.py  command_with_azureopenai.md  demo_run.py  diagnose_trace.py  find_culprit_prs.py  find_snippets.py  focus_and_prompt.py  git_pr_finder.py  llm_client.py  patch_request.py  pyproject.toml  report.json  report_llm.json  requirements.txt  sample_trace_backup1.txt  suggest_fix.py  suggested_fix.patch  symbol_map.py  tmp_find_snips.py  tmp_focus.py  tmp_frames_input.json  tmp_patch_request.py  verify_stack_trace.py  verify_stack_trace_wrapper.py
src/pr_analyzer/: __init__.py  analyzer.py  cli.py  indexer.py  llm.py  parser.py  retriever.py
src/pr_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_analyzer.py  test_diagnose_trace.py  test_indexer.py  test_parser.py  test_verify_stack_trace.py
